--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -27,8 +27,8 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Pertanyaan 1\n",
-        "- Pertanyaan 2"
+        "- Bagaimana pengaruh faktor lingkungan (seperti suhu, kelembapan, curah hujan) terhadap jumlah penyewaan sepeda?\n",
+        "- Apa perbedaan pola penyewaan sepeda berdasarkan hari libur, hari kerja dan akhir pekan, serta musim?"
       ]
     },
     {
@@ -42,25 +42,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
-      "outputs": [
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.12.4' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/User/AppData/Local/Programs/Python/Python312/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n"
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import warnings\n",
+        "\n",
+        "warnings.filterwarnings('ignore')\n",
+        "%matplotlib inline"
       ]
     },
     {
@@ -83,12 +78,182 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "zjCBk1BI8DC1"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>instant</th>\n",
+              "      <th>dteday</th>\n",
+              "      <th>season</th>\n",
+              "      <th>yr</th>\n",
+              "      <th>mnth</th>\n",
+              "      <th>holiday</th>\n",
+              "      <th>weekday</th>\n",
+              "      <th>workingday</th>\n",
+              "      <th>weathersit</th>\n",
+              "      <th>temp</th>\n",
+              "      <th>atemp</th>\n",
+              "      <th>hum</th>\n",
+              "      <th>windspeed</th>\n",
+              "      <th>casual</th>\n",
+              "      <th>registered</th>\n",
+              "      <th>cnt</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.344167</td>\n",
+              "      <td>0.363625</td>\n",
+              "      <td>0.805833</td>\n",
+              "      <td>0.160446</td>\n",
+              "      <td>331</td>\n",
+              "      <td>654</td>\n",
+              "      <td>985</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>2011-01-02</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.363478</td>\n",
+              "      <td>0.353739</td>\n",
+              "      <td>0.696087</td>\n",
+              "      <td>0.248539</td>\n",
+              "      <td>131</td>\n",
+              "      <td>670</td>\n",
+              "      <td>801</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>2011-01-03</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.196364</td>\n",
+              "      <td>0.189405</td>\n",
+              "      <td>0.437273</td>\n",
+              "      <td>0.248309</td>\n",
+              "      <td>120</td>\n",
+              "      <td>1229</td>\n",
+              "      <td>1349</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>2011-01-04</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.200000</td>\n",
+              "      <td>0.212122</td>\n",
+              "      <td>0.590435</td>\n",
+              "      <td>0.160296</td>\n",
+              "      <td>108</td>\n",
+              "      <td>1454</td>\n",
+              "      <td>1562</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>2011-01-05</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.226957</td>\n",
+              "      <td>0.229270</td>\n",
+              "      <td>0.436957</td>\n",
+              "      <td>0.186900</td>\n",
+              "      <td>82</td>\n",
+              "      <td>1518</td>\n",
+              "      <td>1600</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   instant   dteday       season   yr   mnth   holiday   weekday   \\\n",
+              "0         1  2011-01-01         1    0      1         0         6   \n",
+              "1         2  2011-01-02         1    0      1         0         0   \n",
+              "2         3  2011-01-03         1    0      1         0         1   \n",
+              "3         4  2011-01-04         1    0      1         0         2   \n",
+              "4         5  2011-01-05         1    0      1         0         3   \n",
+              "\n",
+              "   workingday   weathersit   temp        atemp       hum        windspeed   \\\n",
+              "0            0            2    0.344167    0.363625   0.805833    0.160446   \n",
+              "1            0            2    0.363478    0.353739   0.696087    0.248539   \n",
+              "2            1            1    0.196364    0.189405   0.437273    0.248309   \n",
+              "3            1            1    0.200000    0.212122   0.590435    0.160296   \n",
+              "4            1            1    0.226957    0.229270   0.436957    0.186900   \n",
+              "\n",
+              "   casual   registered    cnt  \n",
+              "0      331          654   985  \n",
+              "1      131          670   801  \n",
+              "2      120         1229  1349  \n",
+              "3      108         1454  1562  \n",
+              "4       82         1518  1600  "
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "day_df = pd.read_csv(\"data/day.csv\")\n",
+        "day_df.head()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -296,20 +461,23 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "dicoding-data-analyst-sub-10u6e7TX",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.12.4"
     },
-    "orig_nbformat": 4,
-    "vscode": {
-      "interpreter": {
-        "hash": "972b3bf27e332e87b5379f2791f6ef9dfc79c71018c370b0d7423235e20fe4d7"
-      }
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
