--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -28,7 +28,8 @@
       },
       "source": [
         "- Bagaimana pengaruh faktor lingkungan (seperti suhu, kelembapan, curah hujan) terhadap jumlah penyewaan sepeda?\n",
-        "- Apa perbedaan pola penyewaan sepeda berdasarkan hari libur, hari kerja dan akhir pekan?"
+        "- Apa perbedaan pola penyewaan sepeda berdasarkan hari libur, hari kerja dan akhir pekan?\n",
+        "- Bagaimana pengaruh musim terhadap penyewaan sepeda?"
       ]
     },
     {
@@ -396,7 +397,7 @@
         "id": "MMi6xGaDkbCi"
       },
       "source": [
-        "Dari output di atas, kita memiliki 731 data yang terdapat pada 16 kolom untuk dataset Bike Sharing (day). Berdasarkan informasi dari situs Kaggle, variabel-variabel pada dataset Bike Sharing sebagai berikut:\n",
+        "Dari output di atas, kita memiliki 731 data harian penyewa yang terdapat pada 16 kolom untuk dataset Bike Sharing (day). Berdasarkan informasi dari situs Kaggle, variabel-variabel pada dataset Bike Sharing sebagai berikut:\n",
         "- instant: nomor urut dari setiap kolom pada dataset\n",
         "- dteday: tanggal transaksi\n",
         "- season: musim (1: musim semi, 2: musim panas, 3: musim gugur, 4: musim dingin)\n",
@@ -411,7 +412,7 @@
         "- hum: kelembapan yang dinormalisasi, diperoleh dengan membagi nilai kelembapan aktual dengan 100 (nilai maksimum)\n",
         "- windspeed: kecepatan angin yang dinormalisasi,  diperoleh dengan membagi nilai kecepatan angin aktual dengan 67 (nilai maksimum)\n",
         "- casual: jumlah pengguna kasual, yaitu pengguna yang menggunakan layanan penyewaan sepeda tanpa berlangganan atau tanpa memiliki keanggotaan resmi\n",
-        "- registered: jumlah pengguna terdaftar, yaitu pengguna yang memiliki keanggotaan resmi atau berlangganan layanan penyewaan sepeda\n",
+        "- registered: jumlah pengguna terdaftar, yaitu pengguna yang memiliki keanggotaan resmi (member) atau berlangganan layanan penyewaan sepeda\n",
         "- cnt: jumlah total penyewaan sepeda, mencakup gabungan antara pengguna kasual dan pengguna terdaftar"
       ]
     },
@@ -1054,19 +1055,231 @@
         "id": "MW7WF2kr8DC1"
       },
       "source": [
-        "Exploratory Data Analysis atau sering disingkat EDA merupakan proses investigasi awal pada data untuk menganalisis karakteristik, menemukan pola, anomali, dan memeriksa asumsi pada data. Di tahap ini kita akan melakukan EDA dengan menggunakan metode bersifat univariate (melibatkan satu variate atau variabel) dan multivariate (melibatkan dua atau lebih variabel).\n",
-        "Pertama, kita bagi fitur pada dataset menjadi dua bagian, yaitu numerical features dan categorical features."
+        "Exploratory Data Analysis atau sering disingkat EDA merupakan proses investigasi awal pada data untuk menganalisis karakteristik, menemukan pola, anomali, dan memeriksa asumsi pada data."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "e9CQCZjk8DC2"
-      },
-      "outputs": [],
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>season</th>\n",
+              "      <th>yr</th>\n",
+              "      <th>mnth</th>\n",
+              "      <th>holiday</th>\n",
+              "      <th>weekday</th>\n",
+              "      <th>workingday</th>\n",
+              "      <th>weathersit</th>\n",
+              "      <th>temp</th>\n",
+              "      <th>atemp</th>\n",
+              "      <th>hum</th>\n",
+              "      <th>windspeed</th>\n",
+              "      <th>casual</th>\n",
+              "      <th>registered</th>\n",
+              "      <th>cnt</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>2.496580</td>\n",
+              "      <td>0.500684</td>\n",
+              "      <td>6.519836</td>\n",
+              "      <td>0.028728</td>\n",
+              "      <td>2.997264</td>\n",
+              "      <td>0.683995</td>\n",
+              "      <td>1.395349</td>\n",
+              "      <td>0.495385</td>\n",
+              "      <td>0.474354</td>\n",
+              "      <td>0.627894</td>\n",
+              "      <td>0.190486</td>\n",
+              "      <td>848.176471</td>\n",
+              "      <td>3656.172367</td>\n",
+              "      <td>4504.348837</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>1.110807</td>\n",
+              "      <td>0.500342</td>\n",
+              "      <td>3.451913</td>\n",
+              "      <td>0.167155</td>\n",
+              "      <td>2.004787</td>\n",
+              "      <td>0.465233</td>\n",
+              "      <td>0.544894</td>\n",
+              "      <td>0.183051</td>\n",
+              "      <td>0.162961</td>\n",
+              "      <td>0.142429</td>\n",
+              "      <td>0.077498</td>\n",
+              "      <td>686.622488</td>\n",
+              "      <td>1560.256377</td>\n",
+              "      <td>1937.211452</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.059130</td>\n",
+              "      <td>0.079070</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.022392</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>20.000000</td>\n",
+              "      <td>22.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>4.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.337083</td>\n",
+              "      <td>0.337842</td>\n",
+              "      <td>0.520000</td>\n",
+              "      <td>0.134950</td>\n",
+              "      <td>315.500000</td>\n",
+              "      <td>2497.000000</td>\n",
+              "      <td>3152.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>7.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.498333</td>\n",
+              "      <td>0.486733</td>\n",
+              "      <td>0.626667</td>\n",
+              "      <td>0.180975</td>\n",
+              "      <td>713.000000</td>\n",
+              "      <td>3662.000000</td>\n",
+              "      <td>4548.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>10.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>5.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>0.655417</td>\n",
+              "      <td>0.608602</td>\n",
+              "      <td>0.730209</td>\n",
+              "      <td>0.233214</td>\n",
+              "      <td>1096.000000</td>\n",
+              "      <td>4776.500000</td>\n",
+              "      <td>5956.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>4.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>12.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>6.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>0.861667</td>\n",
+              "      <td>0.840896</td>\n",
+              "      <td>0.972500</td>\n",
+              "      <td>0.507463</td>\n",
+              "      <td>3410.000000</td>\n",
+              "      <td>6946.000000</td>\n",
+              "      <td>8714.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           season          yr        mnth     holiday     weekday  workingday  \\\n",
+              "count  731.000000  731.000000  731.000000  731.000000  731.000000  731.000000   \n",
+              "mean     2.496580    0.500684    6.519836    0.028728    2.997264    0.683995   \n",
+              "std      1.110807    0.500342    3.451913    0.167155    2.004787    0.465233   \n",
+              "min      1.000000    0.000000    1.000000    0.000000    0.000000    0.000000   \n",
+              "25%      2.000000    0.000000    4.000000    0.000000    1.000000    0.000000   \n",
+              "50%      3.000000    1.000000    7.000000    0.000000    3.000000    1.000000   \n",
+              "75%      3.000000    1.000000   10.000000    0.000000    5.000000    1.000000   \n",
+              "max      4.000000    1.000000   12.000000    1.000000    6.000000    1.000000   \n",
+              "\n",
+              "       weathersit        temp       atemp         hum   windspeed  \\\n",
+              "count  731.000000  731.000000  731.000000  731.000000  731.000000   \n",
+              "mean     1.395349    0.495385    0.474354    0.627894    0.190486   \n",
+              "std      0.544894    0.183051    0.162961    0.142429    0.077498   \n",
+              "min      1.000000    0.059130    0.079070    0.000000    0.022392   \n",
+              "25%      1.000000    0.337083    0.337842    0.520000    0.134950   \n",
+              "50%      1.000000    0.498333    0.486733    0.626667    0.180975   \n",
+              "75%      2.000000    0.655417    0.608602    0.730209    0.233214   \n",
+              "max      3.000000    0.861667    0.840896    0.972500    0.507463   \n",
+              "\n",
+              "            casual   registered          cnt  \n",
+              "count   731.000000   731.000000   731.000000  \n",
+              "mean    848.176471  3656.172367  4504.348837  \n",
+              "std     686.622488  1560.256377  1937.211452  \n",
+              "min       2.000000    20.000000    22.000000  \n",
+              "25%     315.500000  2497.000000  3152.000000  \n",
+              "50%     713.000000  3662.000000  4548.000000  \n",
+              "75%    1096.000000  4776.500000  5956.000000  \n",
+              "max    3410.000000  6946.000000  8714.000000  "
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "numerical_features = []"
+        "day_df.describe(include='all')"
       ]
     },
     {
@@ -1075,9 +1288,14 @@
         "id": "th_Lzl2Fkj9O"
       },
       "source": [
-        "**Insight:**\n",
-        "- xxx\n",
-        "- xxx"
+        "Berdasarkan data statistik di atas diketahui bahwa terdapat 731 hari penyewaan sepeda oleh pelanggan selama 2 tahun. Berikut rangkuman parameter statistik dari data tersebut:\n",
+        "- Sebagian besar penyewaan sepeda terjadi pada musim panas (kategori 2 pada kolom 'season': musim panas).\n",
+        "- Rata-rata bulan penyewaan berada di sekitar bulan Juni (kategori 6 pada kolom 'mnth': bulan Juni) atau pertengahan tahun.\n",
+        "- Untuk hari libur penyewaan kurang diminati hanya berkisar 0.3% dari keseluruhan data, berbanding terbalik dengan hari kerja yang mana sebagian besar penyewaan sepeda terjadi di hari kerja dengan persentase 68%.\n",
+        "- Hari Rabu (kategori 3 pada kolom 'weekday': hari Rabu) merupakan rata-rata terjadinya penyewaan sepeda oleh pelanggan di setiap minggunya.\n",
+        "- Cuaca berpengaruh besar terhadap penyewaan sepeda, di mana rata-rata penyewaan terjadi pada saat cuaca cerah (kategori 1 pada kolom 'weathersit': cuaca cerah).\n",
+        "- Rata-rata penyewaan harian adalah 4504 sepeda.\n",
+        "- Pengguna yang terdaftar (member) lebih banyak melakukan penyewaan dengan rata-rata 3656 per harinya dibandingkan dengan pengguna kasual dengan rata-rata 848 per hari."
       ]
     },
     {
@@ -1086,7 +1304,22 @@
         "id": "zsyZjqak8DC2"
       },
       "source": [
-        "## Visualization & Explanatory Analysis"
+        "## Visualization & Explanatory Analysis\n",
+        "\n",
+        "Di tahap ini kita akan melakukan EDA dengan menggunakan metode bersifat univariate (melibatkan satu variate atau variabel) dan multivariate (melibatkan dua atau lebih variabel).\n",
+        "Pertama, kita bagi fitur pada dataset menjadi dua bagian, yaitu numerical features dan categorical features."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "e9CQCZjk8DC2"
+      },
+      "outputs": [],
+      "source": [
+        "categorical_features = ['season', 'yr', 'mnth', 'holiday','weekday', 'workingday', 'weathersit']\n",
+        "numerical_features = ['temp', 'atemp', 'hum', 'windspeed', 'casual', 'registered','cnt']"
       ]
     },
     {
