--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ax-3tEjc9Cj1"
       },
@@ -1696,7 +1696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1769,7 +1769,7 @@
               "6  0.042840    0.193763  Cluster 1 (Low Casual, Low Registered)"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1807,7 +1807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1864,8 +1864,9 @@
         "id": "ZTcyR48Y8DC2"
       },
       "source": [
-        "- Conclution pertanyaan 1\n",
-        "- Conclution pertanyaan 2"
+        "- Terdapat hubungan positif antara suhu dan jumlah penyewaan sepeda. Jumlah penyewaan cenderung meningkat pada saat suhu berada di kisaran 20-25°C. Namun, setelah suhu melewati kisaran tersebut, jumlah penyewaan cenderung stabil atau bahkan sedikit menurun. Pada suhu ekstrem, baik rendah (di bawah 5°C) maupun tinggi (di atas 30°C), jumlah penyewaan sepeda cenderung menurun, hal ini menunjukkan bahwa suhu berpengaruh terhadap penyewaan sepeda.\n",
+        "- Penyewaan sepeda lebih banyak terjadi pada hari kerja dibandingkan hari libur. Pada hari kerja, sepeda sering digunakan untuk keperluan transportasi sehari-hari, seperti pergi ke tempat kerja atau aktivitas rutin lainnya. Sementara itu, pada hari libur, meskipun penyewaan bisa meningkat, hal ini lebih disebabkan oleh tingginya aktivitas rekreasi dan hiburan di luar rumah.\n",
+        "- Musim berpengaruh besar terhadap jumlah penyewaan sepeda. Di musim semi, penyewaan cenderung rendah, hal ini disebabkan karena cuaca yang lebih sering hujan atau suhu yang lebih dingin, membuat orang kurang tertarik untuk bersepeda. Saat musim panas, penyewaan meningkat pesat karena cuaca yang lebih hangat dan cerah, cocok untuk aktivitas luar ruangan. Musim gugur menjadi puncak penyewaan sepeda karena suhu yang nyaman dan cuaca yang stabil. Meskipun di musim dingin penyewaan sedikit menurun, masih ada pengguna yang menyewa sepeda, terutama bagi mereka yang membutuhkan transportasi sehari-hari meski cuaca tidak begitu mendukung."
       ]
     }
   ],
