adding dashboard streamlit

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -1601,7 +1601,9 @@
         "id": "9y4VUsmcYNZ5"
       },
       "source": [
-        "## Analisis Lanjutan (Clustering)"
+        "## Analisis Lanjutan (Clustering)\n",
+        "\n",
+        "Berdasarkan dataset Bike Sharing ini, terdapat dua jenis pengguna yaitu pengguna kasual (casual) dan terdaftar (registered). Kemudian dilakukan pengelompokan dengan menggunakan teknik Clustering yang bertujuan untuk melihat pola pengguna dalam menyewa sepeda pada saat hari kerja."
       ]
     },
     {
